--- a/sales/customer/kong/plugins/request-transformer-advanced.yaml
+++ b/sales/customer/kong/plugins/request-transformer-advanced.yaml
@@ -1,8 +1,8 @@
 plugins:
-- enabled: true
-  name: request-transformer-advanced
-  config:
-    add:
-      body: []
-      headers:
-      - X-Powered-By:Konnect!!
+  - enabled: true
+    name: request-transformer-advanced
+    config:
+      add:
+        body: []
+        headers:
+          - X-Powered-By:Konnect!
