--- a/.github/artifacts/customer/customer-kong.yaml
+++ b/.github/artifacts/customer/customer-kong.yaml
@@ -48,12 +48,12 @@ plugins:
   enabled: true
   name: request-transformer-advanced
 services:
-- host: kongair-customers-service.kongair.svc.cluster.local
+- host: host.docker.internal
   id: 690e812e-2873-566a-b02f-d03e0bf8ff69
   name: customer-information-service
   path: /
   plugins: []
-  port: 8083
+  port: 5053
   protocol: http
   routes:
   - id: 5984bb2d-328e-5785-a06a-f639c3a59d94
