--- a/.github/artifacts/customer/customer-kong.yaml
+++ b/.github/artifacts/customer/customer-kong.yaml
@@ -44,7 +44,7 @@ plugins:
     add:
       body: []
       headers:
-      - X-Powered-By:Konnect!!
+      - X-Powered-By:Konnect!
   enabled: true
   name: request-transformer-advanced
 services:
@@ -53,7 +53,7 @@ services:
   name: customer-information-service
   path: /
   plugins: []
-  port: 5053
+  port: 5051
   protocol: http
   routes:
   - id: 5984bb2d-328e-5785-a06a-f639c3a59d94
