--- a/.github/artifacts/flights/flights-kong.yaml
+++ b/.github/artifacts/flights/flights-kong.yaml
@@ -1,11 +1,11 @@
 _format_version: "3.0"
 services:
-- host: flights.kongair
+- host: host.docker.internal
   id: 0cef4d36-9c39-5ac2-9d9f-190d8ea8a252
   name: flights-service
   path: /
   plugins: []
-  port: 8080
+  port: 5052
   protocol: http
   routes:
   - id: 7b2dbd94-ec5b-5ae8-b6d5-4c8b16ce0b06
