--- a/.github/workflows/build-flights.yaml
+++ b/.github/workflows/build-flights.yaml
@@ -32,7 +32,7 @@ jobs:
 
       - name: Add path-based routing namespace
         run: |
-          deck file namespace -s  sales/customer/kong/.generated/kong.yaml -o  sales/customer/kong/.generated/kong.yaml --path-prefix=/flights
+          deck file namespace -s  flight-data/flights/kong/.generated/kong.yaml -o  flight-data/flights/kong/.generated/kong.yaml --path-prefix=/flights
 
       - name: Add plugin configuration
         run: |
