--- a/.github/artifacts/customer/customer-kong.yaml
+++ b/.github/artifacts/customer/customer-kong.yaml
@@ -44,7 +44,7 @@ plugins:
     add:
       body: []
       headers:
-      - X-Powered-By:Konnect!
+      - X-MyHeader:Konnect!
   enabled: true
   name: request-transformer-advanced
 services:
