change to response transformer

--- a/sales/customer/kong/plugins/response-transformer-advanced.yaml
+++ b/sales/customer/kong/plugins/response-transformer-advanced.yaml
@@ -1,8 +1,8 @@
 plugins:
   - enabled: true
-    name: request-transformer-advanced
+    name: response-transformer
     config:
       add:
         body: []
         headers:
-          - X-MyHeader:Konnect!
+          - "X-MyHeader: Konnect!"
