--- a/.github/workflows/build-flights.yaml
+++ b/.github/workflows/build-flights.yaml
@@ -32,7 +32,11 @@ jobs:
           cp /tmp/inso /usr/local/bin/
 
       - name: Lint blog spec
-        run: inso lint spec flight-data/flights/opeanapi.yaml
+        run: |
+          ls -al  
+          pwd
+          ls -al kongair-education-simple/
+          inso lint spec flight-data/flights/opeanapi.yaml
 
       - name: Generate Kong Declarative Configs from Spec
         run: |
