--- a/.github/artifacts/flights/flights-kong.yaml
+++ b/.github/artifacts/flights/flights-kong.yaml
@@ -1,4 +1,10 @@
 _format_version: "3.0"
+plugins:
+- config:
+    add:
+      headers:
+      - x-flights-api:v1
+  name: response-transformer
 services:
 - host: host.docker.internal
   id: 0cef4d36-9c39-5ac2-9d9f-190d8ea8a252
