--- a/.github/workflows/build-flights.yaml
+++ b/.github/workflows/build-flights.yaml
@@ -36,7 +36,7 @@ jobs:
 
       - name: Add plugin configuration
         run: |
-          deck file merge flight-data/flights/kong/.generated/kong.yaml \
+          deck file add-plugins -s flight-data/flights/kong/.generated/kong.yaml \
           flight-data/flights/kong/plugins/*.yaml \
           --output-file flight-data/flights/kong/.generated/kong.yaml
 
