--- a/flight-data/flights/kong/plugins/response-transformer.yaml
+++ b/flight-data/flights/kong/plugins/response-transformer.yaml
@@ -1,7 +1,9 @@
 ---
 _format_version: "3.0"
 add-plugins:
-  - overwrite: false
+  - selectors:
+      - "$..services[0]"
+    overwrite: false
     plugins:
       - name: response-transformer
         config:
